# goit-pythonweb-hw-10

./: README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 9b5c98a2aeeb_initial_migrations.py  f180b86638d9_add_user.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/services/: contacts.py  users.py
